# rocks-smt

./: rust-toolchain
chiplet/: Cargo.toml  README.md
chiplet/src/: lib.rs  poseidon_chip.rs  rollup.rs  smt_chip.rs  utilities.rs
smt/: Cargo.toml
smt/src/: lib.rs  poseidon.rs  smt.rs
