[package]
name = "smt"
version = "0.1.0"
edition = "2021"
authors = ["Guangyu Zhu <guangyuz@gmail.com>"]

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02", package = "halo2_proofs" }
halo2_gadgets = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02", package = "halo2_gadgets" }
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = '0.3.2' }
pasta_curves = "0.5.1"
ark-std = { version = "^0.4.0", default-features = false }
anyhow = "1.0.41"
ff = "0.13.0"
rand = "0.8"
hex = "0.4.3"
